// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id={null}
  layout={5}
  left={null}
  leftButton={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[MockFunction]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id={null}
    layout={5}
    left={null}
    leftButton={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[MockFunction]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding={null}
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip={null}
    top={null}
    useedit={false}
    visible={true}
    widget={null}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom={null}
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id={null}
        layout={5}
        left={null}
        leftButton={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        notooltip={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding={null}
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip={null}
        top={null}
        useedit={false}
        visible={true}
        widget={null}
        width={null}
        xcss={null}
      >
        <Wrapper
          bottom={null}
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id={null}
          layout={5}
          left={null}
          leftButton={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding={null}
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip={null}
          top={null}
          useedit={false}
          visible={true}
          widget={null}
          width={null}
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "fontFamily": "OpenSans, Georgia, serif",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id={null}
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <StyledComponent
                className="ui-item ui-listitem"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-fjdhpX",
                      "isStatic": false,
                      "lastClassName": "fveNcT",
                      "rules": Array [
                        "
	background-color: ",
                        [Function],
                        ";
	color: ",
                        [Function],
                        ";
	cursor: default;
	display: flex;

	",
                        [Function],
                        "

	&:hover .ui-item-button {
		display: inline-flex;
		opacity: 1.0;
	}
",
                      ],
                    },
                    "displayName": "styled.li",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-fjdhpX",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id={null}
                nohover={false}
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
              >
                <li
                  className="ui-item ui-listitem sc-fjdhpX fveNcT"
                  id={null}
                  onBlur={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  selected={false}
                  style={Object {}}
                >
                  <Title
                    bottom={null}
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={true}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id={null}
                    layout={5}
                    left={null}
                    leftButton={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    notooltip={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding={null}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={Object {}}
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip={null}
                    top={null}
                    useedit={false}
                    visible={true}
                    widget={null}
                    width={null}
                    xcss={null}
                  >
                    <Wrapper
                      bottom={null}
                      className="ui-listitem"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={true}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      height={null}
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id={null}
                      layout={5}
                      left={null}
                      leftButton={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      notooltip={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onError={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      padding={null}
                      reset={false}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="test title"
                      tooltip={null}
                      top={null}
                      useedit={false}
                      visible={true}
                      widget={null}
                      width={null}
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "fontFamily": "OpenSans, Georgia, serif",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-title-bar ui-listitem"
                          disabled={true}
                          layout={5}
                          sizing="normal"
                          style={Object {}}
                          visible={true}
                        >
                          <StyledComponent
                            className="ui-title-bar ui-listitem"
                            disabled={true}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-gZMcBi",
                                  "isStatic": false,
                                  "lastClassName": "fDBEWx",
                                  "rules": Array [
                                    "
	box-sizing: border-box;
	display: flex;
	flex-direction: ",
                                    [Function],
                                    ";
	flex-grow: 1;

	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-gZMcBi",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            layout={5}
                            sizing="normal"
                            style={Object {}}
                            visible={true}
                          >
                            <div
                              className="ui-title-bar ui-listitem sc-gZMcBi fDBEWx"
                              disabled={true}
                              style={Object {}}
                            >
                              <Styled(Label)
                                bottom={null}
                                className="ui-title"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={true}
                                err={null}
                                errorMessage={null}
                                focus={false}
                                height={null}
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id={null}
                                layout={5}
                                left={null}
                                leftButton={null}
                                location="none"
                                minHeight={null}
                                minWidth={null}
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                notheme={false}
                                notooltip={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                padding={null}
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={Object {}}
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip={null}
                                top={null}
                                useedit={false}
                                visible={true}
                                widget={null}
                                width={null}
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <StyledComponent
                                  bottom={null}
                                  className="ui-title"
                                  contentEditable={false}
                                  controlled={true}
                                  direction="right"
                                  disabled={true}
                                  err={null}
                                  errorMessage={null}
                                  focus={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-VigVT",
                                        "isStatic": false,
                                        "lastClassName": "dxLNQ",
                                        "rules": Array [
                                          "
	",
                                          "
	padding: ",
                                          [Function],
                                          ";

	",
                                          [Function],
                                          "
",
                                          "
",
                                        ],
                                      },
                                      "defaultStyles": Object {},
                                      "displayName": "Styled(Label)",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "sc-VigVT",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  height={null}
                                  hiddenLeftButton={false}
                                  hiddenRightButton={false}
                                  href={
                                    Object {
                                      "selectHandler": [Function],
                                      "sizing": "normal",
                                    }
                                  }
                                  id={null}
                                  layout={5}
                                  left={null}
                                  leftButton={null}
                                  location="none"
                                  minHeight={null}
                                  minWidth={null}
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  notheme={false}
                                  notooltip={false}
                                  obj="ListItem"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onDoubleClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onMouseOut={[Function]}
                                  onSelect={[Function]}
                                  padding={null}
                                  rightButton={null}
                                  selected={false}
                                  sizing="normal"
                                  stacked={false}
                                  style={Object {}}
                                  testing={true}
                                  text="test title"
                                  theme={null}
                                  title="test title"
                                  tooltip={null}
                                  top={null}
                                  useedit={false}
                                  visible={true}
                                  widget={null}
                                  width={null}
                                  xcss={
                                    Array [
                                      "
	text-align: left;
	flex: 5;
",
                                    ]
                                  }
                                >
                                  <Label
                                    bottom={null}
                                    className="ui-title sc-VigVT dxLNQ"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={true}
                                    err={null}
                                    errorMessage={null}
                                    focus={false}
                                    height={null}
                                    hiddenLeftButton={false}
                                    hiddenRightButton={false}
                                    href={
                                      Object {
                                        "selectHandler": [Function],
                                        "sizing": "normal",
                                      }
                                    }
                                    id={null}
                                    layout={5}
                                    left={null}
                                    leftButton={null}
                                    location="none"
                                    minHeight={null}
                                    minWidth={null}
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    notooltip={false}
                                    obj="ListItem"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    onMouseOut={[Function]}
                                    onSelect={[Function]}
                                    onUpdate={[Function]}
                                    padding={null}
                                    rightButton={null}
                                    selected={false}
                                    sizing="normal"
                                    stacked={false}
                                    style={Object {}}
                                    testing={true}
                                    text="test title"
                                    theme={null}
                                    title="test title"
                                    tooltip={null}
                                    top={null}
                                    useedit={false}
                                    visible={true}
                                    widget={null}
                                    width={null}
                                    xcss={
                                      Array [
                                        "
	text-align: left;
	flex: 5;
",
                                      ]
                                    }
                                  >
                                    <Wrapper
                                      bottom={null}
                                      className="ui-title sc-VigVT dxLNQ"
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={true}
                                      err={null}
                                      errorMessage={null}
                                      focus={false}
                                      height={null}
                                      hiddenLeftButton={false}
                                      hiddenRightButton={false}
                                      href={
                                        Object {
                                          "selectHandler": [Function],
                                          "sizing": "normal",
                                        }
                                      }
                                      id={null}
                                      layout={5}
                                      left={null}
                                      leftButton={null}
                                      location="none"
                                      minHeight={null}
                                      minWidth={null}
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      notooltip={false}
                                      obj="ListItem"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onError={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      onMouseOut={[Function]}
                                      onSelect={[Function]}
                                      onUpdate={[Function]}
                                      padding={null}
                                      reset={false}
                                      rightButton={null}
                                      selected={false}
                                      sizing="normal"
                                      stacked={false}
                                      style={Object {}}
                                      testing={true}
                                      text="test title"
                                      theme={null}
                                      title="test title"
                                      tooltip={null}
                                      top={null}
                                      useedit={false}
                                      visible={true}
                                      widget={null}
                                      width={null}
                                      xcss={
                                        Array [
                                          "
	text-align: left;
	flex: 5;
",
                                        ]
                                      }
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "fontFamily": "OpenSans, Georgia, serif",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.span
                                          className="ui-label ui-title sc-VigVT dxLNQ"
                                          contentEditable={false}
                                          disabled={true}
                                          onBlur={[Function]}
                                          onClick={[Function]}
                                          onDoubleClick={[Function]}
                                          onKeyDown={[Function]}
                                          onKeyPress={[Function]}
                                          sizing="normal"
                                          style={Object {}}
                                          suppressContentEditableWarning={true}
                                          visible={true}
                                        >
                                          <StyledComponent
                                            className="ui-label ui-title sc-VigVT dxLNQ"
                                            contentEditable={false}
                                            disabled={true}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-iwsKbI",
                                                  "isStatic": false,
                                                  "lastClassName": "eruvMJ",
                                                  "rules": Array [
                                                    "
	background-color: inherit;

	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.span",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-iwsKbI",
                                                "target": "span",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={[Function]}
                                            onBlur={[Function]}
                                            onClick={[Function]}
                                            onDoubleClick={[Function]}
                                            onKeyDown={[Function]}
                                            onKeyPress={[Function]}
                                            sizing="normal"
                                            style={Object {}}
                                            suppressContentEditableWarning={true}
                                            visible={true}
                                          >
                                            <span
                                              className="ui-label ui-title sc-VigVT dxLNQ sc-iwsKbI eruvMJ"
                                              contentEditable={false}
                                              disabled={true}
                                              onBlur={[Function]}
                                              onClick={[Function]}
                                              onDoubleClick={[Function]}
                                              onKeyDown={[Function]}
                                              onKeyPress={[Function]}
                                              style={Object {}}
                                              suppressContentEditableWarning={true}
                                            >
                                              test title
                                            </span>
                                          </StyledComponent>
                                        </styled.span>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Label>
                                </StyledComponent>
                              </Styled(Label)>
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </ThemeProvider>
                    </Wrapper>
                  </Title>
                </li>
              </StyledComponent>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id={null}
  layout={5}
  left={null}
  leftButton={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip={null}
  top={null}
  useedit={false}
  visible={false}
  widget={null}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id={null}
    layout={5}
    left={null}
    leftButton={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding={null}
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip={null}
    top={null}
    useedit={false}
    visible={false}
    widget={null}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom={null}
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id={null}
        layout={5}
        left={null}
        leftButton={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        notooltip={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding={null}
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip={null}
        top={null}
        useedit={false}
        visible={false}
        widget={null}
        width={null}
        xcss={null}
      >
        <Wrapper
          bottom={null}
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id={null}
          layout={5}
          left={null}
          leftButton={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding={null}
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip={null}
          top={null}
          useedit={false}
          visible={false}
          widget={null}
          width={null}
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "fontFamily": "OpenSans, Georgia, serif",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id={null}
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <StyledComponent
                className="ui-item ui-listitem"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-fjdhpX",
                      "isStatic": false,
                      "lastClassName": "fveNcT",
                      "rules": Array [
                        "
	background-color: ",
                        [Function],
                        ";
	color: ",
                        [Function],
                        ";
	cursor: default;
	display: flex;

	",
                        [Function],
                        "

	&:hover .ui-item-button {
		display: inline-flex;
		opacity: 1.0;
	}
",
                      ],
                    },
                    "displayName": "styled.li",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-fjdhpX",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id={null}
                nohover={false}
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
              >
                <li
                  className="ui-item ui-listitem sc-fjdhpX fveNcT"
                  id={null}
                  onBlur={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  selected={false}
                  style={Object {}}
                >
                  <Title
                    bottom={null}
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id={null}
                    layout={5}
                    left={null}
                    leftButton={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    notooltip={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding={null}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={Object {}}
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip={null}
                    top={null}
                    useedit={false}
                    visible={false}
                    widget={null}
                    width={null}
                    xcss={null}
                  >
                    <Wrapper
                      bottom={null}
                      className="ui-listitem"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      height={null}
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id={null}
                      layout={5}
                      left={null}
                      leftButton={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      notooltip={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onError={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      padding={null}
                      reset={false}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="test title"
                      tooltip={null}
                      top={null}
                      useedit={false}
                      visible={false}
                      widget={null}
                      width={null}
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "fontFamily": "OpenSans, Georgia, serif",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-title-bar ripple ui-listitem"
                          disabled={false}
                          layout={5}
                          sizing="normal"
                          style={Object {}}
                          visible={false}
                        >
                          <StyledComponent
                            className="ui-title-bar ripple ui-listitem"
                            disabled={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-gZMcBi",
                                  "isStatic": false,
                                  "lastClassName": "bedTZv",
                                  "rules": Array [
                                    "
	box-sizing: border-box;
	display: flex;
	flex-direction: ",
                                    [Function],
                                    ";
	flex-grow: 1;

	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-gZMcBi",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            layout={5}
                            sizing="normal"
                            style={Object {}}
                            visible={false}
                          >
                            <div
                              className="ui-title-bar ripple ui-listitem sc-gZMcBi bedTZv"
                              disabled={false}
                              style={Object {}}
                            >
                              <Styled(Label)
                                bottom={null}
                                className="ui-title"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                err={null}
                                errorMessage={null}
                                focus={false}
                                height={null}
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id={null}
                                layout={5}
                                left={null}
                                leftButton={null}
                                location="none"
                                minHeight={null}
                                minWidth={null}
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                notheme={false}
                                notooltip={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                padding={null}
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={Object {}}
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip={null}
                                top={null}
                                useedit={false}
                                visible={false}
                                widget={null}
                                width={null}
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <StyledComponent
                                  bottom={null}
                                  className="ui-title"
                                  contentEditable={false}
                                  controlled={true}
                                  direction="right"
                                  disabled={false}
                                  err={null}
                                  errorMessage={null}
                                  focus={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-VigVT",
                                        "isStatic": false,
                                        "lastClassName": "dxLNQ",
                                        "rules": Array [
                                          "
	",
                                          "
	padding: ",
                                          [Function],
                                          ";

	",
                                          [Function],
                                          "
",
                                          "
",
                                        ],
                                      },
                                      "defaultStyles": Object {},
                                      "displayName": "Styled(Label)",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "sc-VigVT",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  height={null}
                                  hiddenLeftButton={false}
                                  hiddenRightButton={false}
                                  href={
                                    Object {
                                      "selectHandler": [Function],
                                      "sizing": "normal",
                                    }
                                  }
                                  id={null}
                                  layout={5}
                                  left={null}
                                  leftButton={null}
                                  location="none"
                                  minHeight={null}
                                  minWidth={null}
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  notheme={false}
                                  notooltip={false}
                                  obj="ListItem"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onDoubleClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onMouseOut={[Function]}
                                  onSelect={[Function]}
                                  padding={null}
                                  rightButton={null}
                                  selected={false}
                                  sizing="normal"
                                  stacked={false}
                                  style={Object {}}
                                  testing={true}
                                  text="test title"
                                  theme={null}
                                  title="test title"
                                  tooltip={null}
                                  top={null}
                                  useedit={false}
                                  visible={false}
                                  widget={null}
                                  width={null}
                                  xcss={
                                    Array [
                                      "
	text-align: left;
	flex: 5;
",
                                    ]
                                  }
                                >
                                  <Label
                                    bottom={null}
                                    className="ui-title sc-VigVT dxLNQ"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    err={null}
                                    errorMessage={null}
                                    focus={false}
                                    height={null}
                                    hiddenLeftButton={false}
                                    hiddenRightButton={false}
                                    href={
                                      Object {
                                        "selectHandler": [Function],
                                        "sizing": "normal",
                                      }
                                    }
                                    id={null}
                                    layout={5}
                                    left={null}
                                    leftButton={null}
                                    location="none"
                                    minHeight={null}
                                    minWidth={null}
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    notooltip={false}
                                    obj="ListItem"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    onMouseOut={[Function]}
                                    onSelect={[Function]}
                                    onUpdate={[Function]}
                                    padding={null}
                                    rightButton={null}
                                    selected={false}
                                    sizing="normal"
                                    stacked={false}
                                    style={Object {}}
                                    testing={true}
                                    text="test title"
                                    theme={null}
                                    title="test title"
                                    tooltip={null}
                                    top={null}
                                    useedit={false}
                                    visible={false}
                                    widget={null}
                                    width={null}
                                    xcss={
                                      Array [
                                        "
	text-align: left;
	flex: 5;
",
                                      ]
                                    }
                                  >
                                    <Wrapper
                                      bottom={null}
                                      className="ui-title sc-VigVT dxLNQ"
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={false}
                                      err={null}
                                      errorMessage={null}
                                      focus={false}
                                      height={null}
                                      hiddenLeftButton={false}
                                      hiddenRightButton={false}
                                      href={
                                        Object {
                                          "selectHandler": [Function],
                                          "sizing": "normal",
                                        }
                                      }
                                      id={null}
                                      layout={5}
                                      left={null}
                                      leftButton={null}
                                      location="none"
                                      minHeight={null}
                                      minWidth={null}
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      notooltip={false}
                                      obj="ListItem"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onError={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      onMouseOut={[Function]}
                                      onSelect={[Function]}
                                      onUpdate={[Function]}
                                      padding={null}
                                      reset={false}
                                      rightButton={null}
                                      selected={false}
                                      sizing="normal"
                                      stacked={false}
                                      style={Object {}}
                                      testing={true}
                                      text="test title"
                                      theme={null}
                                      title="test title"
                                      tooltip={null}
                                      top={null}
                                      useedit={false}
                                      visible={false}
                                      widget={null}
                                      width={null}
                                      xcss={
                                        Array [
                                          "
	text-align: left;
	flex: 5;
",
                                        ]
                                      }
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "fontFamily": "OpenSans, Georgia, serif",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.span
                                          className="ui-label ui-title sc-VigVT dxLNQ"
                                          contentEditable={false}
                                          disabled={false}
                                          onBlur={[Function]}
                                          onClick={[Function]}
                                          onDoubleClick={[Function]}
                                          onKeyDown={[Function]}
                                          onKeyPress={[Function]}
                                          sizing="normal"
                                          style={Object {}}
                                          suppressContentEditableWarning={true}
                                          visible={false}
                                        >
                                          <StyledComponent
                                            className="ui-label ui-title sc-VigVT dxLNQ"
                                            contentEditable={false}
                                            disabled={false}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-iwsKbI",
                                                  "isStatic": false,
                                                  "lastClassName": "iAJkTJ",
                                                  "rules": Array [
                                                    "
	background-color: inherit;

	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.span",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-iwsKbI",
                                                "target": "span",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={[Function]}
                                            onBlur={[Function]}
                                            onClick={[Function]}
                                            onDoubleClick={[Function]}
                                            onKeyDown={[Function]}
                                            onKeyPress={[Function]}
                                            sizing="normal"
                                            style={Object {}}
                                            suppressContentEditableWarning={true}
                                            visible={false}
                                          >
                                            <span
                                              className="ui-label ui-title sc-VigVT dxLNQ sc-iwsKbI iAJkTJ"
                                              contentEditable={false}
                                              disabled={false}
                                              onBlur={[Function]}
                                              onClick={[Function]}
                                              onDoubleClick={[Function]}
                                              onKeyDown={[Function]}
                                              onKeyPress={[Function]}
                                              style={Object {}}
                                              suppressContentEditableWarning={true}
                                            >
                                              test title
                                            </span>
                                          </StyledComponent>
                                        </styled.span>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Label>
                                </StyledComponent>
                              </Styled(Label)>
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </ThemeProvider>
                    </Wrapper>
                  </Title>
                </li>
              </StyledComponent>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": null,
  "layout": 5,
  "left": null,
  "leftButton": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "ListItem",
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "padding": null,
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "​",
  "tooltip": null,
  "top": null,
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": null,
  "xcss": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id={null}
  layout={5}
  left={null}
  leftButton={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title left"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="test title right"
  width={null}
  xcss={null}
>
  <Item
    bottom={null}
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id={null}
    layout={5}
    left={null}
    leftButton={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding={null}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title left"
    tooltip={null}
    top={null}
    useedit={false}
    visible={true}
    widget="test title right"
    width={null}
    xcss={null}
  />
</Wrapper>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id={null}
  layout={5}
  left={null}
  leftButton={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  rightButton={null}
  selected={true}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Item
    bottom={null}
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id={null}
    layout={5}
    left={null}
    leftButton={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding={null}
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip={null}
    top={null}
    useedit={false}
    visible={true}
    widget={null}
    width={null}
    xcss={null}
  />
</Wrapper>
`;
